--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/analogdevicesinc/linux.git
 [submodule "openwifi-hw"]
 	path = openwifi-hw
-	url = https://github.com/open-sdr/openwifi-hw.git
+	url = https://github.com/pzanna/openwifi-hw.git
