--- a/user_space/wp4_control/wp4_control.cfg
+++ b/user_space/wp4_control/wp4_control.cfg
@@ -1,6 +1,12 @@
 # WP4 Control config file
 #
 # traning_count is the number frame used to create the classification model
+# min_rule is the minimum number of rules for covering to be applied
+# min_match is the minimum number of matches required for covering to NOT be applied
+# minmax_offset is the percentage that is added to the actual value
 #
 
 training_count '500'
+min_rule '30'
+min_match '10'
+minmax_offset '10'
