LCS with SN+SP+ACC

--- a/user_space/wp4_control/wp4_control.cfg
+++ b/user_space/wp4_control/wp4_control.cfg
@@ -1,12 +1,16 @@
 # WP4 Control config file
 #
-# traning_count is the number frame used to create the classification model
+# traning_count is the number frames used to create the classification model
 # min_rule is the minimum number of rules for covering to be applied
 # min_match is the minimum number of matches required for covering to NOT be applied
 # minmax_offset is the percentage that is added to the actual value
 #
 
-training_count '500'
-min_rule '30'
+training_count '5000'
+validation_count '100'
+min_rule '0'
 min_match '10'
+min_correct_match '10'
 minmax_offset '10'
+min_del_exp '500'
+min_del_sen '0.1'
