--- a/user_space/wp4_control/Makefile
+++ b/user_space/wp4_control/Makefile
@@ -4,6 +4,6 @@ TARGET_CFLAGS += -ggdb3
 FILES = wp4_control.c
 
 wp4_control: $(FILES)
-			$(CC) -g -w -o $@ $(FILES)
+			$(CC) -g -w -o $@ $(FILES) -lm
 
 
