--- a/user_space/wp4_control/wp4_control.cfg
+++ b/user_space/wp4_control/wp4_control.cfg
@@ -2,15 +2,22 @@
 #
 # traning_count is the number frames used to create the classification model
 # min_rule is the minimum number of rules for covering to be applied
-# min_match is the minimum number of matches required for covering to NOT be applied
+# min_class_match is the minimum number of rules of a class for covering is applied
+# min_correct_match is the minimum number of correct rules for covering to be applied
 # minmax_offset is the percentage that is added to the actual value
+# min_del_exp is the experience count where deletion is applied 
+# min_del_acc is the minimum accuracy value or the rule is deleted 
+# min_del_fs is the minimum F-score or the rule is deleted
+# min_correct_acc is the percentage to be considered correct 
 #
 
-training_count '5000'
-validation_count '100'
+debug '2'
 min_rule '0'
-min_match '10'
-min_correct_match '10'
+max_class_rules '100'
+min_correct_match '20'
 minmax_offset '10'
-min_del_exp '500'
-min_del_sen '0.1'
+min_del_exp '200'
+min_del_acc '0.9'
+min_del_fs '0.1'
+min_match_exp '200'
+min_correct_acc '60'
