--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "adi-linux"]
 	path = adi-linux
-	url = https://github.com/analogdevicesinc/linux.git
+	url = https://github.com/pzanna/linux.git
 [submodule "adi-linux-64"]
 	path = adi-linux-64
-	url = https://github.com/analogdevicesinc/linux.git
+	url = https://github.com/pzanna/linux.git
 [submodule "openwifi-hw"]
 	path = openwifi-hw
 	url = https://github.com/pzanna/openwifi-hw.git
