Necessary change for scripts of driver building

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -1,6 +1,6 @@
 # Xianjun jiao. putaoshu@msn.com; xianjun.jiao@imec.be
 
-obj-m += sdr.o
+obj-m += sdr.o openofdm_rx/openofdm_rx.o openofdm_tx/openofdm_tx.o tx_intf/tx_intf.o rx_intf/rx_intf.o xpu/xpu.o
 
 all:
 	make -C $(KDIR) M=$(PWD) modules
