Remove unnecessary line from dhcpd.conf

--- a/user_space/dhcpd.conf
+++ b/user_space/dhcpd.conf
@@ -13,7 +13,7 @@
 ddns-update-style none;
 
 # option definitions common to all supported networks...
-option domain-name "orca-project.eu";
+# option domain-name "orca-project.eu";
 #option domain-name-servers ns1.example.org, ns2.example.org;
 
 default-lease-time 600;
