--- a/user_space/hostapd-openwifi-11ag.conf
+++ b/user_space/hostapd-openwifi-11ag.conf
@@ -11,6 +11,9 @@ basic_rates=60 90 120 180
 #require_ht=1
 #ieee80211d=1
 #ieee80211h=1
-#wpa=2
-#wpa_passphrase=myrabbit
-#wpa_key_mgmt=WPA-PSK
+wpa=1
+wpa_passphrase=openwifi
+wpa_key_mgmt=WPA-PSK
+wpa_pairwise=TKIP CCMP
+wpa_ptk_rekey=600
+
