--- a/user_space/hostapd-openwifi.conf
+++ b/user_space/hostapd-openwifi.conf
@@ -11,6 +11,9 @@ ieee80211n=1
 require_ht=1
 #ieee80211d=1
 #ieee80211h=1
-#wpa=2
-#wpa_passphrase=myrabbit
-#wpa_key_mgmt=WPA-PSK
+wpa=1
+wpa_passphrase=openwifi
+wpa_key_mgmt=WPA-PSK
+wpa_pairwise=TKIP CCMP
+wpa_ptk_rekey=600
+
