Remove password from hostapd-openwifi-11ag.conf

--- a/user_space/hostapd-openwifi-11ag.conf
+++ b/user_space/hostapd-openwifi-11ag.conf
@@ -11,9 +11,9 @@ basic_rates=60 90 120 180
 #require_ht=1
 #ieee80211d=1
 #ieee80211h=1
-wpa=1
-wpa_passphrase=openwifi
-wpa_key_mgmt=WPA-PSK
-wpa_pairwise=TKIP CCMP
-wpa_ptk_rekey=600
+#wpa=1
+#wpa_passphrase=openwifi
+#wpa_key_mgmt=WPA-PSK
+#wpa_pairwise=TKIP CCMP
+#wpa_ptk_rekey=600
 
